# projects

./: README.md
hello_world_nao/: CMakeLists.txt  CMakeLists.txt~  package.xml
hello_world_nao/src/: hello.cpp~
rapp/: CMakeLists.txt  package.xml  package.xml.save
rapp/include/rapp/: hello_world.h
rapp/launch/: hello_world.launch~  hello_world_server.launch
rapp/src/: hello_world.cpp  hello_world.cpp~  hello_world_server.cpp~
