<?xml version="1.0"?>
<package>
  <name>rapp</name>
  <version>0.0.0</version>
  <description>The rapp package used for testing hop.</description>

  <maintainer email="maksym.figat44@gmail.com">Maksym Figat</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
